--- a/MultiRegion_Geolift_Analysis.ipynb
+++ b/MultiRegion_Geolift_Analysis.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1JmJ9fNZ_qccu6YWyZegGZJhTvckhe4lk",
-      "authorship_tag": "ABX9TyMQS5iLrNxleyMFCioUm5z1",
+      "authorship_tag": "ABX9TyNgPNswgD+BYyk74+cXedlJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1085,6 +1085,38 @@
       "metadata": {
         "id": "50bYCZLHGmJ1"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import nbformat\n",
+        "\n",
+        "path = \"/content/drive/MyDrive/Colab Notebooks/MultiRegion Geolift Analysis.ipynb\"\n",
+        "nb = nbformat.read(path, as_version=4)\n",
+        "\n",
+        "if \"widgets\" in nb[\"metadata\"]:\n",
+        "    del nb[\"metadata\"][\"widgets\"]\n",
+        "\n",
+        "nbformat.write(nb, path)\n",
+        "print(\"✅ Cleaned widget metadata — safe to upload to GitHub.\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9Lm241R4SUnX",
+        "outputId": "9f96b043-8058-4751-ef0f-6ddf3b831024"
+      },
+      "execution_count": 55,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "✅ Cleaned widget metadata — safe to upload to GitHub.\n"
+          ]
+        }
+      ]
     }
   ]
 }
